--- a/src/style/index.css
+++ b/src/style/index.css
@@ -5,7 +5,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "IBM Plex Sans KR", sans-serif;
+  font-family: "Gowun Dodum", sans-serif;
 }
 
 p {
